--- a/novilie/src/scss/main.scss
+++ b/novilie/src/scss/main.scss
@@ -7,8 +7,8 @@ $border-radius: 8px;
 $colors:(
    primary:#449DD1,
    primary-gradient: linear-gradient(to bottom right,#88caf0 , #1b93e9),
-   primary-light: lighten(#0050FF, 40%),
-   primary-dark: darken(#0050FF, 40%),
+   primary-light: lighten(#449DD1, 40%),
+   primary-dark: darken(#449DD1, 40%),
    accent:#1D2951,
    accent-light: #1d2951a9,
    light-text:#CECECE,
